# RoyaTest

./: .replit  Pasted--php-Plugin-Name-Revenue-Calculator-Description-A-plugin-to-calculate-potential-revenue-based--1726794475087.txt  Pasted--roi-calculator-max-width-400px-margin-0-auto-padding-20px-border-1px-solid-1726794524392.txt  Pasted-2024-09-27-08-15-27-75-04aee3f3-User-Serving-Flask-app-main-2024-09-27-08-15-27-75-04aee3f3-User-1727443270472.txt  Pasted-Chat-history-ChatGPT-ChatGPT-GPT-Marketing-Assistant-GPT-Plumber-s-Companion-GPT-Prompt-Engi-1726794451590.txt  Pasted-g-ms-b-134-b-strict-transport-security-b-max-age-31536000-includeSubDomains-preload-b--1727801770863.txt  README.md  gunicorn.conf.py  main.py  openai_helpers.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  wsgi.py
static/css/: output.css  styles.css  tailwind.css
static/js/: app.js
templates/: index.html  login.html  settings.html
utils/: logging_config.py
