[tool.poetry]
name = "repl-nix-smsassistantsim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
openai = "^1.46.0"
flask-session = "^0.8.0"
python-dotenv = "^1.0.1"
werkzeug = "^3.0.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
